--- a/LiteCommerce.DataLayers/LiteCommerce.DataLayers.csproj
+++ b/LiteCommerce.DataLayers/LiteCommerce.DataLayers.csproj
@@ -43,12 +43,16 @@
     <Compile Include="ICategoryDAL.cs" />
     <Compile Include="ICustomerDAL.cs" />
     <Compile Include="IEmployeeDAL.cs" />
+    <Compile Include="IProductAttributeDAL.cs" />
+    <Compile Include="IProductDAL.cs" />
     <Compile Include="IShipperDAL.cs" />
     <Compile Include="ISupplierDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServer\CategoryDAL.cs" />
     <Compile Include="SqlServer\CustomerDAL.cs" />
     <Compile Include="SqlServer\EmployeeDAL.cs" />
+    <Compile Include="SqlServer\ProductAttributeDAL.cs" />
+    <Compile Include="SqlServer\ProductDAL.cs" />
     <Compile Include="SqlServer\ShipperDAL.cs" />
     <Compile Include="SqlServer\SupplierDAL.cs" />
   </ItemGroup>
