--- a/LiteCommerce.DataLayers/LiteCommerce.DataLayers.csproj
+++ b/LiteCommerce.DataLayers/LiteCommerce.DataLayers.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="IAttributeDAL.cs" />
     <Compile Include="ICategoryDAL.cs" />
+    <Compile Include="ICountryDAL.cs" />
     <Compile Include="ICustomerDAL.cs" />
     <Compile Include="IEmployeeDAL.cs" />
     <Compile Include="IProductAttributeDAL.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServer\AttributeDAL.cs" />
     <Compile Include="SqlServer\CategoryDAL.cs" />
+    <Compile Include="SqlServer\CountryDAL.cs" />
     <Compile Include="SqlServer\CustomerDAL.cs" />
     <Compile Include="SqlServer\EmployeeDAL.cs" />
     <Compile Include="SqlServer\ProductAttributeDAL.cs" />
