--- a/LiteCommerce.DomainModels/LiteCommerce.DomainModels.csproj
+++ b/LiteCommerce.DomainModels/LiteCommerce.DomainModels.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Attribute.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="Country.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Order.cs" />
