--- a/LiteCommerce.BusinessLayers/LiteCommerce.BusinessLayers.csproj
+++ b/LiteCommerce.BusinessLayers/LiteCommerce.BusinessLayers.csproj
@@ -43,6 +43,8 @@
     <Compile Include="CatalogBLL.cs" />
     <Compile Include="EmployeeBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserAccountBLL.cs" />
+    <Compile Include="UserAccountTypes.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LiteCommerce.DataLayers\LiteCommerce.DataLayers.csproj">
