--- a/LiteCommerce.Admin/LiteCommerce.Admin.csproj
+++ b/LiteCommerce.Admin/LiteCommerce.Admin.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Models\CategoryPaginationResult.cs" />
     <Compile Include="Models\CustomerPaginationResult.cs" />
     <Compile Include="Models\EmployeePaginationResult.cs" />
+    <Compile Include="Models\OrderPaginationResult.cs" />
     <Compile Include="Models\PaginationResult.cs" />
     <Compile Include="Models\ProductPaginationResult.cs" />
     <Compile Include="Models\ShipperPaginationResult.cs" />
