Country list, add, update, delete

--- a/LiteCommerce.Admin/LiteCommerce.Admin.csproj
+++ b/LiteCommerce.Admin/LiteCommerce.Admin.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Codes\WebUserRoles.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
+    <Compile Include="Controllers\CountryController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\EmployeeController.cs" />
@@ -169,6 +170,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\CategoryPaginationResult.cs" />
+    <Compile Include="Models\CountryPaginationResult.cs" />
     <Compile Include="Models\CustomerPaginationResult.cs" />
     <Compile Include="Models\EmployeePaginationResult.cs" />
     <Compile Include="Models\OrderPaginationResult.cs" />
@@ -7166,6 +7168,8 @@
     <Content Include="Views\Shipper\Input.cshtml" />
     <Content Include="Views\Supplier\Input.cshtml" />
     <Content Include="Views\Product\Input.cshtml" />
+    <Content Include="Views\Country\Index.cshtml" />
+    <Content Include="Views\Country\Input.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
